--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -2,6 +2,11 @@
 
 /* BODY */
 body {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
@@ -33,9 +38,9 @@ p {
 /* Section Web Developer */
 .web-dev {
   color: #25a2c3;
-  font-size: 2em;
+  font-size: 3em;
   font-weight: bold;
-  padding-top: 2.5em;
+  padding-top: 1em;
   text-align: center;
 }
 .red-button {
@@ -57,6 +62,7 @@ p {
 
 /* Content Section */
 .content {
+  text-align: center;
   background-color: white;
   border: #dee1e3 solid 1px;
   border-bottom: #e22d0e solid 1px;
@@ -79,6 +85,9 @@ p {
 .red-banner {
   background-color: #e22d0e;
   color: white;
+}
+#spazio {
+  margin-bottom: 3em;
 }
 .promessa {
   font-size: 2.5em;
