--- a/assets/css/style-mobile.css
+++ b/assets/css/style-mobile.css
@@ -4,7 +4,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: 400;
   font-style: normal;
   font-variation-settings: "wdth" 100;
   margin-right: auto;
